# CIFO_project

./: .gitignore  AGENTS.md  GeneticAlgorithm.md  README.md  main.py  pyproject.toml
notebooks/: Exploration.ipynb  Grid_search_experiment.ipynb  Initial_analysis.ipynb  Random_search_experiment.ipynb  Results_analysis.ipynb  Step_by_step_exploration.ipynb
results/: random_search_summary.csv
results/baseline/: baseline-ga_2026-05-06T13-59-50.json  baseline-ga_2026-05-06T14-28-18.json  baseline-ga_2026-05-06T14-32-45.json  baseline-ga_2026-05-06T14-40-33.json  baseline-ga_2026-05-06T14-59-39.json  baseline-ga_2026-05-06T14-59-55.json  baseline-ga_2026-05-06T15-00-12.json  baseline-ga_2026-05-06T15-00-27.json  baseline-ga_2026-05-06T15-00-42.json  baseline-ga_2026-05-07T13-04-31-980090.json  baseline-ga_2026-05-07T13-04-31-980583.json  baseline-ga_2026-05-07T13-04-31-980791.json  baseline-ga_2026-05-07T13-04-31-981281.json  baseline-ga_2026-05-07T13-04-31-981533.json  baseline-ga_2026-05-07T16-23-29-664658.json  baseline-ga_2026-05-07T16-23-29-665290.json  baseline-ga_2026-05-07T16-23-29-665570.json  baseline-ga_2026-05-07T16-23-29-665819.json  baseline-ga_2026-05-07T16-23-29-666051.json
results/crossover_grid/: crossover-cycle-r0.85_2026-05-16T21-38-55-662364.json  crossover-cycle-r0.85_2026-05-16T21-38-55-662983.json  (+108 more)
src/: __init__.py  fitness.py  load_image.py  population.py  rendering.py
tests/: test_crossover_children.py  test_grid_search.py  test_imports.py  test_rmse_structure_fitness.py  test_seeded_initialization.py  test_selection.py  test_workflow.py
(+412 files in other folders)
